# life_science_ai

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md
backend/: .env.example  main.py  pyproject.toml
backend/agent/: graph.py  state.py
backend/agent/tools/: __init__.py  analyze_sentiment.py  common.py  distribute_sample.py  edit_interaction.py  generate_call_summary.py  get_hcp_profile.py  log_interaction.py  schedule_followup_meeting.py  search_interactions.py  share_material.py  suggest_follow_up.py
backend/app/: config.py  database.py
backend/models/: __init__.py  entities.py
backend/routers/: agent.py  hcp.py  interactions.py
backend/schemas/: __init__.py  chat.py  hcp.py  interaction.py
backend/scripts/: clear_database.py
backend/services/: groq_client.py
backend/tests/: test_health.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/store/: chatSlice.js  index.js  interactionSlice.js  interactionThunks.js
