[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.135.3",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "langchain-core>=1.2.29",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.6",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "rapidfuzz>=3.14.5",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
